Fixing the menu position on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3199,8 +3199,8 @@ input, select, textarea {
 			}
 
 				#header nav {
-					right: 0.5em;
-					top: 0.5em;
+					right: -1.0em;
+					top: -2.5em;
 				}
 
 					#header nav ul li a[href="#menu"]:before, #header nav ul li a[href="#menu"]:after {
